--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,6 +4,7 @@
 
 html {
   font-family: 'Roboto', open-sans;
+  background: rgb(192, 31, 31);
 }
 
 body {
@@ -37,8 +38,8 @@ header {
 #calculator input {
   font: inherit;
   font-size: 3rem;
-  border: 2px solid #000;
-  width: 10rem;
+  border: 2px solid #023d6d;
+  width: 17rem;
   padding: 0.15rem;
   margin: auto;
   display: block;
@@ -59,14 +60,23 @@ header {
   cursor: pointer;
 }
 
+#results button {
+  font: inherit;
+  background: rgb(204, 187, 33);
+  color: white;
+  border: 1px solid #023d6d;
+  padding: 1rem;
+  cursor: pointer;
+}
+
 #calculator button:focus {
   outline: none;
 }
 
 #calculator button:hover,
 #calculator button:active {
-  background: #ffd000;
-  border-color: #e5ff00;
+  background: #084f88;
+  border-color: #084f88;
 }
 
 #calc-actions button {
@@ -77,3 +87,4 @@ header {
   margin-top: 1rem;
   text-align: center;
 }
+
